myteo/test/analyze/type_check/ternary/basic.exp
Error: Expected type `Bool` but found `T`
test/analyze/type_check/ternary/basic.myte:7:2
 7 |   x ? 1 : 2;
   |   ^

Error: Expected type `Int` but found `String`
test/analyze/type_check/ternary/basic.myte:18:13-21
 18 |   true ? 1 : "string";
    |              ^^^^^^^^

Error: Expected type `T` but found `U`
test/analyze/type_check/ternary/basic.myte:19:13
 19 |   true ? x : y;
    |              ^

Error: Expected type `(Int, Int)` but found `(Int, Int, Int)`
test/analyze/type_check/ternary/basic.myte:20:18-27
 20 |   true ? (1, 2) : (1, 2, 3);
    |                   ^^^^^^^^^

Error: Expected type `Int` but found `String`
test/analyze/type_check/ternary/basic.myte:23:14-22
 23 |   (true ? 1 : "string": Int);
    |               ^^^^^^^^

Error: Expected type `String` but found `Int`
test/analyze/type_check/ternary/basic.myte:24:3-22
 24 |   (true ? 1 : "string": String);
    |    ^^^^^^^^^^^^^^^^^^^

Error: Expected type `Int` but found `String`
test/analyze/type_check/ternary/basic.myte:24:14-22
 24 |   (true ? 1 : "string": String);
    |               ^^^^^^^^